2002-01-03  Darin Adler  <darin@bentspoon.com>

	* TODO:
	* test-rsvg.c: (main):
	Some cleanup on the test program.

	* configure.in:
	* librsvg.spec.in:
	Remove gtk requirement and remove remnants of the old
	freetype requirement. Also get rid of gmodule and gthread
	since we only use glib itself.

	* makefile-simple:
	* subpixel-text-test:
	Remove some no-longer-useful files (these were never
	in the tarball anyway).

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* rsvg.c: (rsvg_text_handler_characters):
	Don't set font_family to NULL since pangoft2 doesn't
	currnetly handle this properly.

2002-01-02  Darin Adler  <darin@bentspoon.com>

	* librsvg-2.0.pc.in: Remove spurious 2.0 from pango
	package name.

2002-01-02  Darin Adler  <darin@bentspoon.com>

	* Makefile.am:
	* configure.in:
	* librsvg-2.0.pc.in:
	* librsvg.spec.in:
	* rsvg-ft.c: Remove.
	* rsvg-ft.h: Remove.
	* rsvg.h:
	* test-ft-gtk.c: Remove.
	* test-ft.c: Remove.
	* test-rsvg.c:
	Remove direct FreeType dependency and also remove
	dependency on libpng. No more rsvg_set_fonts_dir
	or rsvg-ft.h header.

	* rsvg.c: (rsvg_state_clone), (rsvg_state_finalize),
	(rsvg_parse_style_arg), (rsvg_pop_opacity_group),
	(rsvg_text_handler_characters), (rsvg_handle_free):
	Port from direct FreeType use to Pango.

2001-12-06  Darin Adler  <darin@bentspoon.com>

	* rsvg-paint-server.h: Add a dummy member since empty structs
	are illegal.

2001-12-03  Darin Adler  <darin@bentspoon.com>

	* rsvg-paint-server.c: (rsvg_paint_server_lin_grad_render),
	(rsvg_paint_server_rad_grad_render): Prevent empty gradients
	from crashing librsvg.

	* rsvg.c: (rsvg_start_svg): Prevent huge image sizes from causing
	a core dump by doing overflow checking and using g_try_malloc
	instead of g_new.

	* test-64684-1.svg:
	* test-64684-2.svg:
	Add some more test cases.

Tue Nov 20 20:20:50 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in (dnl): Add some quoting needed by
	some autoconf versions.
